--- a/x360ce.App.Beta/Controls/AboutUserControl.xaml
+++ b/x360ce.App.Beta/Controls/AboutUserControl.xaml
@@ -1,199 +1,189 @@
 <UserControl
-	x:Class="x360ce.App.Controls.AboutUserControl"
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	Loaded="UserControl_Loaded"
-	Unloaded="UserControl_Unloaded"
-	mc:Ignorable="d">
-	<Grid>
-		<Grid.RowDefinitions>
-			<RowDefinition Height="auto" />
-			<RowDefinition Height="*" />
-		</Grid.RowDefinitions>
-		<Grid>
-			<Grid.RowDefinitions>
-				<RowDefinition Height="auto" />
-				<RowDefinition Height="auto" />
-				<RowDefinition Height="auto" />
-				<RowDefinition Height="auto" />
-				<RowDefinition Height="auto" />
-				<RowDefinition Height="auto" />
-				<RowDefinition Height="*" />
-			</Grid.RowDefinitions>
-			<Grid.ColumnDefinitions>
-				<ColumnDefinition Width="auto" />
-				<ColumnDefinition Width="auto" />
-				<ColumnDefinition Width="auto" />
-				<ColumnDefinition Width="auto" />
-				<ColumnDefinition Width="auto" />
-				<ColumnDefinition Width="*" />
-			</Grid.ColumnDefinitions>
-			<ContentControl
-				Name="RightIcon"
-				Grid.Row="0"
-				Grid.RowSpan="6"
-				Grid.Column="0"
-				Width="48"
-				Height="48"
-				Margin="4,4,8,4"
-				Padding="0"
-				VerticalAlignment="Top"
-				Content="{StaticResource Icon_gamepad}" />
-			<Label
-				Name="AboutProductLabel"
-				Grid.Row="0"
-				Grid.Column="1"
-				Grid.ColumnSpan="5"
-				Padding="4,8,0,0"
-				FontWeight="Bold"
-                Content="XBOX 360 Controller Emulator {0}" />
+    x:Class="x360ce.App.Controls.AboutUserControl"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Loaded="UserControl_Loaded"
+    Unloaded="UserControl_Unloaded"
+    mc:Ignorable="d">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <ContentControl
+                Name="RightIcon"
+                Grid.Row="0"
+                Grid.RowSpan="6"
+                Grid.Column="0"
+                Width="48"
+                Height="48"
+                Margin="4,4,8,4"
+                Padding="0"
+                VerticalAlignment="Top"
+                Content="{StaticResource Icon_gamepad}" />
             <Label
-				Name="AboutDescriptionLabel"
-				Grid.Row="1"
-				Grid.Column="1"
-				Grid.ColumnSpan="5"
-				Padding="4,4,0,8"
+                Name="AboutProductLabel"
+                Grid.Row="0"
+                Grid.Column="1"
+                Grid.ColumnSpan="5"
+                Padding="4,8,0,0"
+                Content="XBOX 360 Controller Emulator {0}"
+                FontWeight="Bold" />
+            <Label
+                Name="AboutDescriptionLabel"
+                Grid.Row="1"
+                Grid.Column="1"
+                Grid.ColumnSpan="5"
+                Padding="4,4,0,8"
                 Content="Settings editor and test application for XBOX 360 Controller Emulator" />
             <Label
-				Grid.Row="3"
-				Grid.Column="1"
-				Padding="3,0,0,0"
-				VerticalAlignment="Center"
+                Grid.Row="3"
+                Grid.Column="1"
+                Padding="3,0,0,0"
+                VerticalAlignment="Center"
                 Content="X360CE" />
             <TextBlock
-				Grid.Row="3"
-				Grid.Column="2"
-				Margin="0"
-				Padding="4,2,2,2">
-				<Hyperlink NavigateUri="https://www.x360ce.com" RequestNavigate="HyperLink_RequestNavigate" TextDecorations="None">
-					https://www.x360ce.com
-				</Hyperlink>
-			</TextBlock>
+                Grid.Row="3"
+                Grid.Column="2"
+                Margin="0"
+                Padding="4,2,2,2">
+                <Hyperlink NavigateUri="https://www.x360ce.com" RequestNavigate="HyperLink_RequestNavigate" TextDecorations="None">
+                    https://www.x360ce.com
+                </Hyperlink>
+            </TextBlock>
             <Label
-				Grid.Row="4"
-				Grid.Column="1"
-				Padding="3,0,0,0"
-				VerticalAlignment="Center"
+                Grid.Row="4"
+                Grid.Column="1"
+                Padding="3,0,0,0"
+                VerticalAlignment="Center"
                 Content="Jocys.com" />
             <TextBlock
-				Grid.Row="4"
-				Grid.Column="2"
-				Margin="0"
-				Padding="4,2,2,2">
-				<Hyperlink NavigateUri="https://www.jocys.com" RequestNavigate="HyperLink_RequestNavigate" TextDecorations="None">
-					https://www.jocys.com
-				</Hyperlink>
-			</TextBlock>
+                Grid.Row="4"
+                Grid.Column="2"
+                Margin="0"
+                Padding="4,2,2,2">
+                <Hyperlink NavigateUri="https://www.jocys.com" RequestNavigate="HyperLink_RequestNavigate" TextDecorations="None">
+                    https://www.jocys.com
+                </Hyperlink>
+            </TextBlock>
             <Label
-				Grid.Row="5"
-				Grid.Column="1"
-				Padding="3,0,0,0"
-				VerticalAlignment="Center"
+                Grid.Row="5"
+                Grid.Column="1"
+                Padding="3,0,0,0"
+                VerticalAlignment="Center"
                 Content="ViGEm" />
             <TextBlock
-				Grid.Row="5"
-				Grid.Column="2"
-				Margin="0"
-				Padding="4,2,2,2">
-				<Hyperlink NavigateUri="https://vigem.org" RequestNavigate="HyperLink_RequestNavigate" TextDecorations="None">
-					https://vigem.org
-				</Hyperlink>
-			</TextBlock>
+                Grid.Row="5"
+                Grid.Column="2"
+                Margin="0"
+                Padding="4,2,2,2">
+                <Hyperlink NavigateUri="https://vigem.org" RequestNavigate="HyperLink_RequestNavigate" TextDecorations="None">
+                    https://vigem.org
+                </Hyperlink>
+            </TextBlock>
             <Label
-				Grid.Row="3"
-				Grid.Column="4"
-				Padding="8,0,0,0"
-				VerticalAlignment="Center"
-                Content="GitHub Project"/>
+                Grid.Row="3"
+                Grid.Column="4"
+                Padding="8,0,0,0"
+                VerticalAlignment="Center"
+                Content="GitHub Project" />
             <TextBlock
-				Grid.Row="3"
-				Grid.Column="5"
-				Margin="0"
-				Padding="4,2,2,2">
-				<Hyperlink NavigateUri="https://github.com/x360ce/x360ce" RequestNavigate="HyperLink_RequestNavigate" TextDecorations="None">
-					https://github.com/x360ce/x360ce
-				</Hyperlink>
-			</TextBlock>
+                Grid.Row="3"
+                Grid.Column="5"
+                Margin="0"
+                Padding="4,2,2,2">
+                <Hyperlink NavigateUri="https://github.com/x360ce/x360ce" RequestNavigate="HyperLink_RequestNavigate" TextDecorations="None">
+                    https://github.com/x360ce/x360ce
+                </Hyperlink>
+            </TextBlock>
             <Label
-				Grid.Row="4"
-				Grid.Column="4"
-				Padding="8,0,0,0"
-				VerticalAlignment="Center"
-                Content="Nucleoprotein"/>
+                Grid.Row="4"
+                Grid.Column="4"
+                Padding="8,0,0,0"
+                VerticalAlignment="Center"
+                Content="Nucleoprotein" />
             <TextBlock
-				Grid.Row="4"
-				Grid.Column="5"
-				Margin="0"
-				Padding="4,2,2,2">
-				<Hyperlink NavigateUri="https://github.com/nucleoprotein" RequestNavigate="HyperLink_RequestNavigate" TextDecorations="None">
-					https://github.com/nucleoprotein
-				</Hyperlink>
-			</TextBlock>
+                Grid.Row="4"
+                Grid.Column="5"
+                Margin="0"
+                Padding="4,2,2,2">
+                <Hyperlink NavigateUri="https://github.com/nucleoprotein" RequestNavigate="HyperLink_RequestNavigate" TextDecorations="None">
+                    github.com/nucleoprotein
+                </Hyperlink>
+            </TextBlock>
             <Label
-				Grid.Row="5"
-				Grid.Column="4"
-				Padding="8,0,0,0"
-				VerticalAlignment="Center"
-                Content="ToCA EDIT"/>
+                Grid.Row="5"
+                Grid.Column="4"
+                Padding="8,0,0,0"
+                VerticalAlignment="Center"
+                Content="ToCA EDIT" />
             <TextBlock
-				Grid.Row="5"
-				Grid.Column="5"
-				Margin="0"
-				Padding="4,2,2,2">
-				<Hyperlink NavigateUri="http://www.tocaedit.com" RequestNavigate="HyperLink_RequestNavigate" TextDecorations="None">
-					http://www.tocaedit.com
-				</Hyperlink>
-			</TextBlock>
-		</Grid>
-		<TabControl
-			Name="AboutTabControl"
-			Grid.Row="1"
-			Margin="3,3,3,3"
-			Padding="0,0,0,0">
-			<TabItem Name="ChangesTabPage" Header="Changes">
-				<TextBox
-					Name="ChangeLogTextBox"
-					Margin="0"
-					Padding="0"
-					HorizontalAlignment="Stretch"
-					VerticalAlignment="Stretch"
-					VerticalContentAlignment="Top"
-					BorderThickness="0"
-					IsReadOnly="True"
-					ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-					ScrollViewer.VerticalScrollBarVisibility="Auto"
-					TextWrapping="Wrap" />
-			</TabItem>
-			<TabItem Name="LicenseTabPage" Header="License">
-				<TextBox
-					Name="LicenseTextBox"
-					Margin="0"
-					Padding="0"
-					HorizontalAlignment="Stretch"
-					VerticalAlignment="Stretch"
-					VerticalContentAlignment="Top"
-					BorderThickness="0"
-					IsReadOnly="True"
-					ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-					ScrollViewer.VerticalScrollBarVisibility="Auto"
-					TextWrapping="Wrap" />
-			</TabItem>
-			<TabItem Name="IconExperienceTabPage" Header="IconExperience License">
-				<TextBox
-					Name="IconExperienceTextBox"
-					Margin="0"
-					Padding="0"
-					HorizontalAlignment="Stretch"
-					VerticalAlignment="Stretch"
-					VerticalContentAlignment="Top"
-					BorderThickness="0"
-					IsReadOnly="True"
-					ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-					ScrollViewer.VerticalScrollBarVisibility="Auto"
-					TextWrapping="Wrap" />
-			</TabItem>
-		</TabControl>
-	</Grid>
+                Grid.Row="5"
+                Grid.Column="5"
+                Margin="0"
+                Padding="4,2,2,2">
+                <Hyperlink NavigateUri="http://www.tocaedit.com" RequestNavigate="HyperLink_RequestNavigate" TextDecorations="None">
+                    http://www.tocaedit.com
+                </Hyperlink>
+            </TextBlock>
+        </Grid>
+        <TabControl Name="AboutTabControl" Grid.Row="1" Margin="3">
+            <TabItem Name="ChangesTabPage" Header="Changes">
+                <TextBox
+                    Name="ChangeLogTextBox"
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Stretch"
+                    VerticalContentAlignment="Top"
+                    Background="Transparent"
+                    IsReadOnly="True"
+                    ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                    ScrollViewer.VerticalScrollBarVisibility="Auto"
+                    TextWrapping="Wrap" />
+            </TabItem>
+            <TabItem Name="LicenseTabPage" Header="License">
+                <TextBox
+                    Name="LicenseTextBox"
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Stretch"
+                    VerticalContentAlignment="Top"
+                    Background="Transparent"
+                    IsReadOnly="True"
+                    ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                    ScrollViewer.VerticalScrollBarVisibility="Auto"
+                    TextWrapping="Wrap" />
+            </TabItem>
+            <TabItem Name="IconExperienceTabPage" Header="IconExperience License">
+                <TextBox
+                    Name="IconExperienceTextBox"
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Stretch"
+                    VerticalContentAlignment="Top"
+                    Background="Transparent"
+                    IsReadOnly="True"
+                    ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                    ScrollViewer.VerticalScrollBarVisibility="Auto"
+                    TextWrapping="Wrap" />
+            </TabItem>
+        </TabControl>
+    </Grid>
 </UserControl>
