--- a/x360ce.App.Beta/Controls/OptionsInternetControl.xaml
+++ b/x360ce.App.Beta/Controls/OptionsInternetControl.xaml
@@ -17,7 +17,7 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <WrapPanel Orientation="Horizontal" Margin="3">
+        <WrapPanel Margin="3" Orientation="Horizontal">
             <GroupBox Header="Online Account - Login">
                 <Grid>
                     <Grid.RowDefinitions>
