--- a/x360ce.App.Beta/Controls/PadItem_DPadControl.xaml
+++ b/x360ce.App.Beta/Controls/PadItem_DPadControl.xaml
@@ -1,65 +1,70 @@
 <UserControl
-	x:Class="x360ce.App.Controls.PadItem_DPadControl"
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:JcControls="clr-namespace:JocysCom.ClassLibrary.Controls;assembly=x360ce.Engine"
-	xmlns:controls="clr-namespace:x360ce.App.Controls"
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	Loaded="UserControl_Loaded"
-	Unloaded="UserControl_Unloaded"
-	mc:Ignorable="d">
-	<GroupBox HorizontalAlignment="Left" VerticalAlignment="Top" Header="Axis to D-Pad">
-		<StackPanel Orientation="Horizontal">
-			<CheckBox
-				x:Name="EnabledCheckBox"
-				Margin="3,3,3,3"
-				VerticalAlignment="Top"
-				Content="Enabled" />
+    x:Class="x360ce.App.Controls.PadItem_DPadControl"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:JcControls="clr-namespace:JocysCom.ClassLibrary.Controls;assembly=x360ce.Engine"
+    xmlns:controls="clr-namespace:x360ce.App.Controls"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Loaded="UserControl_Loaded"
+    Unloaded="UserControl_Unloaded"
+    mc:Ignorable="d">
+    <GroupBox Margin="3">
+        <GroupBox.Header>
+            <CheckBox
+                Name="EnabledCheckBox"
+                Margin="-4"
+                VerticalAlignment="Center"
+                Content="Axis to D-Pad" />
+        </GroupBox.Header>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition />
+                <RowDefinition />
+            </Grid.RowDefinitions>
 
-			<StackPanel Orientation="Vertical">
-				<StackPanel Orientation="Vertical">
-					<Label Name="DeadZoneLabel" Content="DeadZone:" />
-					<StackPanel Orientation="Horizontal">
-						<Slider Name="DeadZoneTrackBar" Width="200" VerticalAlignment="Center" />
-						<TextBox
-							Name="DeadZoneTextBox"
-							Width="50"
-							HorizontalAlignment="Left"
-							HorizontalContentAlignment="Right"
-							IsReadOnly="True"
-							IsTabStop="False"
-							Text="0 %" />
-						<JcControls:NumericUpDown
-							x:Name="DeadZoneUpDown"
-							MinWidth="75"
-							VerticalAlignment="Center"
-							Value="0" />
-					</StackPanel>
+            <Label Name="DeadZoneLabel" Margin="0,0,5,0" Content="DeadZone" />
+            <StackPanel Grid.Column="1" Orientation="Horizontal">
+                <Slider Name="DeadZoneTrackBar" Width="200" VerticalAlignment="Center" />
+                <TextBox
+                    Name="DeadZoneTextBox"
+                    Width="50"
+                    HorizontalContentAlignment="Right"
+                    IsReadOnly="True"
+                    IsTabStop="False"
+                    Text="0 %" />
+                <JcControls:NumericUpDown
+                    x:Name="DeadZoneUpDown"
+                    MinWidth="75"
+                    VerticalAlignment="Center"
+                    Value="0" />
+            </StackPanel>
 
-				</StackPanel>
-				<StackPanel Orientation="Vertical">
-					<Label Name="OffsetLabel" Content="Offset:" />
-					<StackPanel Orientation="Horizontal">
-						<Slider Name="OffsetTrackBar" Width="200" VerticalAlignment="Center" />
-						<TextBox
-							Name="OffsetTextBox"
-							Width="50"
-							HorizontalAlignment="Left"
-							HorizontalContentAlignment="Right"
-							IsReadOnly="True"
-							IsTabStop="False"
-							Text="0 %" />
-						<JcControls:NumericUpDown
-							x:Name="OffsetUpDown"
-							MinWidth="75"
-							VerticalAlignment="Center"
-							Value="0" />
-					</StackPanel>
-				</StackPanel>
-			</StackPanel>
+            <Label
+                Name="OffsetLabel"
+                Grid.Row="1"
+                Margin="0,0,5,0"
+                Content="Offset" />
+            <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal">
+                <Slider Name="OffsetTrackBar" Width="200" VerticalAlignment="Center" />
+                <TextBox
+                    Name="OffsetTextBox"
+                    Width="50"
+                    HorizontalContentAlignment="Right"
+                    IsReadOnly="True"
+                    IsTabStop="False"
+                    Text="0 %" />
+                <JcControls:NumericUpDown
+                    x:Name="OffsetUpDown"
+                    MinWidth="75"
+                    VerticalAlignment="Center"
+                    Value="0" />
+            </StackPanel>
+        </Grid>
 
-		</StackPanel>
-
-	</GroupBox>
+    </GroupBox>
 </UserControl>
