--- a/x360ce.App.Beta/Controls/PadItem_ForceFeedbackControl.xaml
+++ b/x360ce.App.Beta/Controls/PadItem_ForceFeedbackControl.xaml
@@ -1,95 +1,103 @@
 ﻿<UserControl
-	x:Class="x360ce.App.Controls.PadItem_ForceFeedbackControl"
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:JcControls="clr-namespace:JocysCom.ClassLibrary.Controls;assembly=x360ce.Engine"
-	xmlns:controls="clr-namespace:x360ce.App.Controls"
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	d:DesignHeight="500"
-	d:DesignWidth="800"
-	Loaded="UserControl_Loaded"
-	Unloaded="UserControl_Unloaded"
-	mc:Ignorable="d">
-	<Grid>
-		<Grid.ColumnDefinitions>
-			<ColumnDefinition Width="Auto" />
-			<ColumnDefinition Width="Auto" />
-			<ColumnDefinition Width="*" />
-		</Grid.ColumnDefinitions>
-		<Grid.RowDefinitions>
-			<RowDefinition Height="Auto" />
-			<RowDefinition Height="*" />
-			<RowDefinition Height="Auto" />
-		</Grid.RowDefinitions>
+    x:Class="x360ce.App.Controls.PadItem_ForceFeedbackControl"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:JcControls="clr-namespace:JocysCom.ClassLibrary.Controls;assembly=x360ce.Engine"
+    xmlns:controls="clr-namespace:x360ce.App.Controls"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    d:DesignHeight="500"
+    d:DesignWidth="800"
+    Loaded="UserControl_Loaded"
+    Unloaded="UserControl_Unloaded"
+    mc:Ignorable="d">
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
 
-		<GroupBox Grid.Row="0" Grid.Column="0" Header="General">
-			<StackPanel>
-				<CheckBox x:Name="ForceEnabledCheckBox" Content="Enabled" />
-				<CheckBox x:Name="SwapMotorsCheckBox" Content="Swap Motors" />
-				<StackPanel Orientation="Vertical">
-					<Label Name="StrengthLabel" Content="Overall Effects Strength" />
-					<StackPanel Orientation="Horizontal">
-						<Slider Name="StrengthTrackBar" Width="200" VerticalAlignment="Center" />
-						<TextBox
-							Name="StrengthTextBox"
-							Width="50"
-							HorizontalAlignment="Left"
-							HorizontalContentAlignment="Right"
-							IsReadOnly="True"
-							IsTabStop="False"
-							Text="0 %" />
-						<JcControls:NumericUpDown
-							x:Name="StrengthUpDown"
-							MinWidth="75"
-							VerticalAlignment="Center"
-							Value="0" />
-					</StackPanel>
-				</StackPanel>
+        <GroupBox
+            Grid.Row="0"
+            Grid.Column="0"
+            Margin="3,3,0,3"
+            Header="General">
+            <StackPanel>
+                <CheckBox x:Name="ForceEnabledCheckBox" Content="Enabled" />
+                <CheckBox x:Name="SwapMotorsCheckBox" Content="Swap Motors" />
+                <StackPanel Orientation="Vertical">
+                    <Label Name="StrengthLabel" Content="Overall Effects Strength" />
+                    <StackPanel Orientation="Horizontal">
+                        <Slider Name="StrengthTrackBar" Width="200" VerticalAlignment="Center" />
+                        <TextBox
+                            Name="StrengthTextBox"
+                            Width="50"
+                            HorizontalAlignment="Left"
+                            HorizontalContentAlignment="Right"
+                            IsReadOnly="True"
+                            IsTabStop="False"
+                            Text="0 %" />
+                        <JcControls:NumericUpDown
+                            x:Name="StrengthUpDown"
+                            MinWidth="75"
+                            VerticalAlignment="Center"
+                            Value="0" />
+                    </StackPanel>
+                </StackPanel>
 
-			</StackPanel>
-		</GroupBox>
+            </StackPanel>
+        </GroupBox>
 
-		<GroupBox Grid.Row="0" Grid.Column="1" Header="Effects">
-			<StackPanel>
-				<StackPanel Grid.Column="3" Orientation="Horizontal">
-					<Label VerticalAlignment="Center" Content="Type / Implementation" />
-					<ComboBox x:Name="ForceTypeComboBox" SelectionChanged="ForceTypeComboBox_SelectionChanged" />
-				</StackPanel>
-				<TextBlock
-					x:Name="ForceTypeDescriptionTextBlock"
-					Grid.Row="2"
-					Grid.ColumnSpan="2"
-					TextWrapping="Wrap">
-					[ForceTypeDescriptionTextBlock]
-				</TextBlock>
-			</StackPanel>
-		</GroupBox>
+        <GroupBox
+            Grid.Row="0"
+            Grid.Column="1"
+            Margin="3"
+            Header="Effects">
+            <StackPanel>
+                <StackPanel Grid.Column="3" Orientation="Horizontal">
+                    <Label VerticalAlignment="Center" Content="Type / Implementation" />
+                    <ComboBox x:Name="ForceTypeComboBox" SelectionChanged="ForceTypeComboBox_SelectionChanged" />
+                </StackPanel>
+                <TextBlock
+                    x:Name="ForceTypeDescriptionTextBlock"
+                    Grid.Row="2"
+                    Grid.ColumnSpan="2"
+                    TextWrapping="Wrap">
+                    [ForceTypeDescriptionTextBlock]
+                </TextBlock>
+            </StackPanel>
+        </GroupBox>
 
-		<controls:PadItem_ForceFeedback_MotorControl
-			x:Name="LeftForceFeedbackMotorPanel"
-			Grid.Row="1"
-			Grid.Column="0"
-			x:FieldModifier="public" />
-		<controls:PadItem_ForceFeedback_MotorControl
-			x:Name="RightForceFeedbackMotorPanel"
-			Grid.Row="1"
-			Grid.Column="1"
-			x:FieldModifier="public" />
-		<TextBlock
-			Grid.Row="2"
-			Grid.ColumnSpan="3"
-			Padding="3,3,3,3"
-			TextWrapping="Wrap">
-			If your controller have only one motor then force feedback effects will be merged automatically.
-			Values sent by the game to the Left Motor, which is used to simulate large explosions, crashes, gun fire, etc,
-			will be able to reach maximum vibration effect.
-			You can reduce strength of the Right Motor to simulate small force feedbacks effects like button responses,
-			small collision bumps, etc. GamePads must use Constant effect type.
-			Wheels must use Periodic effect type, which is perfect for simulating GamePad vibration effects.
-		</TextBlock>
+        <controls:PadItem_ForceFeedback_MotorControl
+            x:Name="LeftForceFeedbackMotorPanel"
+            Grid.Row="1"
+            Grid.Column="0"
+            x:FieldModifier="public" />
+        <controls:PadItem_ForceFeedback_MotorControl
+            x:Name="RightForceFeedbackMotorPanel"
+            Grid.Row="1"
+            Grid.Column="1"
+            x:FieldModifier="public" />
+        <TextBlock
+            Grid.Row="2"
+            Grid.ColumnSpan="3"
+            Padding="3,3,3,3"
+            TextWrapping="Wrap">
+            If your controller have only one motor then force feedback effects will be merged automatically.
+            Values sent by the game to the Left Motor, which is used to simulate large explosions, crashes, gun fire, etc,
+            will be able to reach maximum vibration effect.
+            You can reduce strength of the Right Motor to simulate small force feedbacks effects like button responses,
+            small collision bumps, etc. GamePads must use Constant effect type.
+            Wheels must use Periodic effect type, which is perfect for simulating GamePad vibration effects.
+        </TextBlock>
 
 
 
-	</Grid>
+    </Grid>
 </UserControl>
