--- a/x360ce.App.Beta/Controls/PadItem_ForceFeedback_MotorControl.xaml
+++ b/x360ce.App.Beta/Controls/PadItem_ForceFeedback_MotorControl.xaml
@@ -1,88 +1,85 @@
 ﻿<UserControl
-	x:Class="x360ce.App.Controls.PadItem_ForceFeedback_MotorControl"
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:JcControls="clr-namespace:JocysCom.ClassLibrary.Controls;assembly=x360ce.Engine"
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	Loaded="UserControl_Loaded"
-	Unloaded="UserControl_Unloaded"
-	mc:Ignorable="d">
-	<GroupBox
-		x:Name="MainGroupBox"
-		Header="Motor"
-        Margin="3,3,0,3">
+    x:Class="x360ce.App.Controls.PadItem_ForceFeedback_MotorControl"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:JcControls="clr-namespace:JocysCom.ClassLibrary.Controls;assembly=x360ce.Engine"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Loaded="UserControl_Loaded"
+    Unloaded="UserControl_Unloaded"
+    mc:Ignorable="d">
+    <GroupBox x:Name="MainGroupBox" Margin="3,3,0,3" Header="Motor">
 
-		<StackPanel Orientation="Vertical">
-			<Grid>
-				<Grid.ColumnDefinitions>
-					<ColumnDefinition Width="Auto" />
-					<ColumnDefinition Width="*" />
-					<ColumnDefinition Width="Auto" />
-					<ColumnDefinition Width="Auto" />
-				</Grid.ColumnDefinitions>
-				<StackPanel Grid.Column="3" Orientation="Horizontal">
-					<Label VerticalAlignment="Center" Content="Direction" />
-					<ComboBox x:Name="DirectionComboBox" />
-				</StackPanel>
-			</Grid>
-			<StackPanel Orientation="Vertical">
-				<Label Name="StrengthLabel" Content="Strength" />
-				<StackPanel Orientation="Horizontal">
-					<Slider Name="StrengthTrackBar" Width="200" VerticalAlignment="Center" />
-					<TextBox
-						Name="StrengthTextBox"
-						Width="50"
-						HorizontalAlignment="Left"
-						HorizontalContentAlignment="Right"
-						IsReadOnly="True"
-						IsTabStop="False"
-						Text="0 %" />
-					<JcControls:NumericUpDown
-						x:Name="StrengthUpDown"
-						MinWidth="75"
-						VerticalAlignment="Center"
-						Value="0" />
-				</StackPanel>
-			</StackPanel>
-			<StackPanel Orientation="Vertical">
-				<Label Name="PeriodLabel" Content="Period (ms)" />
-				<StackPanel Orientation="Horizontal">
-					<Slider Name="PeriodTrackBar" Width="200" VerticalAlignment="Center" />
-					<TextBox
-						Name="PeriodTextBox"
-						Width="50"
-						HorizontalAlignment="Left"
-						HorizontalContentAlignment="Right"
-						IsReadOnly="True"
-						IsTabStop="False"
-						Text="0 %" />
-					<JcControls:NumericUpDown
-						x:Name="PeriodUpDown"
-						MinWidth="75"
-						VerticalAlignment="Center"
-						Value="0" />
-				</StackPanel>
-			</StackPanel>
-			<StackPanel Orientation="Vertical">
-				<Label Name="TestLabel" Content="Test" />
-				<StackPanel Orientation="Horizontal">
-					<Slider Name="TestTrackBar" Width="200" VerticalAlignment="Center" />
-					<TextBox
-						Name="TestTextBox"
-						Width="50"
-						HorizontalAlignment="Left"
-						HorizontalContentAlignment="Right"
-						IsReadOnly="True"
-						IsTabStop="False"
-						Text="0 %" />
-					<JcControls:NumericUpDown
-						x:Name="TestUpDown"
-						MinWidth="75"
-						VerticalAlignment="Center"
-						Value="0" />
-				</StackPanel>
-			</StackPanel>
-		</StackPanel>
-	</GroupBox>
+        <StackPanel Orientation="Vertical">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+                <StackPanel Grid.Column="3" Orientation="Horizontal">
+                    <Label VerticalAlignment="Center" Content="Direction" />
+                    <ComboBox x:Name="DirectionComboBox" />
+                </StackPanel>
+            </Grid>
+            <StackPanel Orientation="Vertical">
+                <Label Name="StrengthLabel" Content="Strength" />
+                <StackPanel Orientation="Horizontal">
+                    <Slider Name="StrengthTrackBar" Width="200" VerticalAlignment="Center" />
+                    <TextBox
+                        Name="StrengthTextBox"
+                        Width="50"
+                        HorizontalAlignment="Left"
+                        HorizontalContentAlignment="Right"
+                        IsReadOnly="True"
+                        IsTabStop="False"
+                        Text="0 %" />
+                    <JcControls:NumericUpDown
+                        x:Name="StrengthUpDown"
+                        MinWidth="75"
+                        VerticalAlignment="Center"
+                        Value="0" />
+                </StackPanel>
+            </StackPanel>
+            <StackPanel Orientation="Vertical">
+                <Label Name="PeriodLabel" Content="Period (ms)" />
+                <StackPanel Orientation="Horizontal">
+                    <Slider Name="PeriodTrackBar" Width="200" VerticalAlignment="Center" />
+                    <TextBox
+                        Name="PeriodTextBox"
+                        Width="50"
+                        HorizontalAlignment="Left"
+                        HorizontalContentAlignment="Right"
+                        IsReadOnly="True"
+                        IsTabStop="False"
+                        Text="0 %" />
+                    <JcControls:NumericUpDown
+                        x:Name="PeriodUpDown"
+                        MinWidth="75"
+                        VerticalAlignment="Center"
+                        Value="0" />
+                </StackPanel>
+            </StackPanel>
+            <StackPanel Orientation="Vertical">
+                <Label Name="TestLabel" Content="Test" />
+                <StackPanel Orientation="Horizontal">
+                    <Slider Name="TestTrackBar" Width="200" VerticalAlignment="Center" />
+                    <TextBox
+                        Name="TestTextBox"
+                        Width="50"
+                        HorizontalAlignment="Left"
+                        HorizontalContentAlignment="Right"
+                        IsReadOnly="True"
+                        IsTabStop="False"
+                        Text="0 %" />
+                    <JcControls:NumericUpDown
+                        x:Name="TestUpDown"
+                        MinWidth="75"
+                        VerticalAlignment="Center"
+                        Value="0" />
+                </StackPanel>
+            </StackPanel>
+        </StackPanel>
+    </GroupBox>
 </UserControl>
