--- a/x360ce.App.Beta/Controls/OptionsHidGuardianControl.xaml
+++ b/x360ce.App.Beta/Controls/OptionsHidGuardianControl.xaml
@@ -63,17 +63,32 @@
                     IsEnabled="False" />
             </Grid>
         </GroupBox>
-        <RichTextBox
-            Name="HelpRichTextBox"
+        <Border
             Grid.Row="1"
+            Margin="3"
             Background="White"
-            BorderThickness="0"
-            IsReadOnly="True">
-            <FlowDocument>
-                <Paragraph>
-                    <Run />
-                </Paragraph>
-            </FlowDocument>
-        </RichTextBox>
+            BorderBrush="{StaticResource BorderDark}"
+            BorderThickness="1"
+            CornerRadius="5">
+            <RichTextBox
+                Name="HelpRichTextBox"
+                Padding="3,6,3,6"
+                Background="Transparent"
+                BorderThickness="0"
+                VerticalScrollBarVisibility="Auto">
+                <RichTextBox.OpacityMask>
+                    <VisualBrush>
+                        <VisualBrush.Visual>
+                            <Border
+                                Width="{Binding ActualWidth, ElementName=HelpRichTextBox}"
+                                Height="{Binding ActualHeight, ElementName=HelpRichTextBox}"
+                                Background="White"
+                                CornerRadius="5"
+                                SnapsToDevicePixels="True" />
+                        </VisualBrush.Visual>
+                    </VisualBrush>
+                </RichTextBox.OpacityMask>
+            </RichTextBox>
+        </Border>
     </Grid>
 </UserControl>
